--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* import fonts */
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&family=Montserrat:wght@400;700&family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&family='Montserrat':wght@400;700&family=Roboto:wght@300&display=swap");
 
 * {
   margin: 0;
@@ -15,38 +15,40 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 /* Log section for mobile */
+header {
+  position: fixed;
+  top: 19px;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
 .navbarLogin {
+  width: 50vw;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
-  padding: 10px 20px;
 }
 .navbarLogin > a {
   text-decoration: none;
 }
 a > .login {
-  position: fixed;
-  top: 28px;
-  left: 81px;
   width: 46px;
   height: 18px;
   border: 0;
   background-color: transparent;
   color: #ffffff;
   /* font */
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 13.99px;
 }
 
 a > .signup {
-  position: fixed;
-  top: 19px;
-  left: 145px;
   width: 90px;
   height: 36px;
   color: #ffffff;
@@ -57,20 +59,21 @@ a > .signup {
   border-radius: 18px;
   opacity: 1;
   /* font */
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 13.99px;
 }
-
+.heroText {
+  width: 90vw;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
 /* HeroText Section */
 .heroText > .dreamshare {
-  /* Layout Properties */
-  position: fixed;
-  top: 170px;
-  left: 79px;
-  width: 160px;
-  height: 24px;
-
   /* UI Properties */
 
   text-align: center;
@@ -79,38 +82,25 @@ a > .signup {
   opacity: 1;
 
   /* font */
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 20px;
 }
 .heroText .mainPhrase {
-  position: fixed;
-  /* Layout Properties */
-
-  top: 221px;
-  left: 15px;
-  width: 300px;
-  height: 73px;
-
+  max-width: 334px;
   text-align: center;
   letter-spacing: 0px;
   color: #ffffff;
   opacity: 1;
   /* font */
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 30px;
 }
 .heroText > .subtitlehero {
-  /* Layout Properties */
-    position: fixed;
-  top: 301px;
-  left: 51px;
-  width: 216px;
-  height: 46px;
-
   /* UI Properties */
-
+  width: 70%;
+  max-width: 233px;
   text-align: center;
   letter-spacing: 0px;
   color: #ffffff;
@@ -122,27 +112,104 @@ a > .signup {
 }
 
 .findHolidayPartner > a {
-    position: fixed;
-
   text-decoration: none;
   color: #ebebea;
   background-color: #ff4e50;
   border-radius: 20px;
-  padding: 8px 20px;
-  top: 372px;
-  left: 66px;
-  width: 280px;
-  height: 18px;
-  
+  padding: 15px 30px;
+
   /* UI Properties */
-  
+
   text-align: center;
   letter-spacing: 0px;
-  color: #FFFFFF;
+  color: #ffffff;
   opacity: 1;
-/* fonts */
-font-family: Montserrat, sans-serif;
+  /* fonts */
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   font-size: 18px;
+}
+/************** second screen view  *************/
+.second-screen-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.second-screen-view > .how-dreamshare-works {
+  /* UI Properties */
+  padding: 10px;
+  text-align: center;
+  letter-spacing: 0px;
+  color: #333333;
+  opacity: 1;
+
+  /* font */
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 22px;
+  color: #333333;
+}
+/********* cards **************/
+.dreamshare-Card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding: 10px;
+  width: 300px;
+  height: 240px;
+  gap: 10px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  margin-bottom: 10.65px;
+}
+.dreamshare-Card > .card-step {
+  background-color: #ff4e50;
+  border-radius: 20px;
+  width: 70px;
+  height: 20px;
+  color: #ffffff;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding: 3.45px 12.56px;
+}
+.dreamshare-Card > .card-maintext {
+    display: flex;
+    align-items: center;
+    width: 180px;
+    height: 58px;
+    
+    color: #ffffff;
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    
+  }
+  .dreamshare-Card > .card-subtext {
+    
+   
+    color: #CCCCCC;
+    text-align: left;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    
+  }
+
+#card1 {
+  background-image: url("./assets/img/step1desk.png");
+  
+}
+#card2 {
+background-image: url("./assets/img/step2desk.png");
 
 }
+#card3 {
+background-image: url("./assets/img/step3desk.png");
+
+}
+
+/*********************** search Section **************************/
